# network-kernel

./: .bazelrc  .gitattributes  .gitignore  AGENTS.md  WORKSPACE  bazel-bin  bazel-network-example  bazel-out  bazel-testlogs  platform_mappings  run_server.sh
.agents/skills/bazel-build/: SKILL.md
.agents/skills/code-style-alignment/: CHECKLIST.md  SKILL.md  TRIGGERS.md
.agents/skills/completion-smoke-test/: SKILL.md
.agents/skills/token-aware-planning/: SKILL.md
.agents/skills/unity-plugin-package-builder/: SKILL.md
.agents/skills/unity-plugin-plan-guideline/: SKILL.md
.github/workflows/: unity-package-dev.yml  unity-package-release.yml
app/: BUILD.bazel  client_app.cc  client_app.h  dedicated_server_app.cc  dedicated_server_app.h  host_server_app.cc  host_server_app.h  main.cc
app/dedicated_server/: BUILD.bazel  main.cc
app/example_client/: BUILD.bazel  main.cc
app/host_server/: BUILD.bazel  main.cc
docs/: AUTHORITATIVE_WEAPON_CURRENT_IMPLEMENTATION.md  AUTHORITATIVE_WEAPON_FOUNDATION_STATUS.md  COLLIDER_POLICY_REQUIREMENTS.md  DATA_DRIVEN_TEMPLATE_DESIGN.md  GAME_SERVER_API_SCAFFOLD.md  GAME_SERVER_V1.md  HYBRID_AI_TREE_FRAMEWORK_IMPLEMENTATION.md  M6_ABI.md  NETCODE_SYNC_POLICY.md  NETWORK_KERNEL_ABI.md  PROJECTILE_SYNC_KERNEL_ABI_PLAN.md  ROADMAP.md
engine/: BUILD
engine/components/ai/: BUILD.bazel
engine/components/ai/include/ai/: ai_command.h  ai_context.h  ai_node.h  ai_scheduler.h  ai_tree.h  ai_value.h  capability_registry.h  node_factory.h  node_status.h  scenario_analysis.h  yaml_loader.h
engine/components/ai/src/: ai_command.cc  ai_context.cc  ai_scheduler.cc  ai_tree.cc  capability_registry.cc  node_factory.cc  yaml_loader.cc
engine/components/tests/ai_tests/: BUILD.bazel  ai_context_test.cc  ai_scheduler_test.cc  capability_registry_test.cc  command_buffer_test.cc  composite_nodes_test.cc  dependency_boundary_test.sh  leaf_nodes_test.cc  node_factory_test.cc  scenario_analysis_test.cc  yaml_loader_test.cc
engine/src/: BUILD  main.cc
engine/src/kernel/: BUILD.bazel
engine/src/kernel/public/: kernel_api.h  kernel_types.h
engine/src/kernel/src/: build_info.cc  build_info.h  kernel.cc  kernel.h  kernel_api.cc  lan_discovery.cc  lan_discovery.h  render_state_builder.cc  render_state_builder.h  tick_loop.cc  tick_loop.h
engine/src/protocol/: BUILD.bazel
engine/src/protocol/public/: m2_packets.h  network_packets.h  packet_header.h  session_packets.h
engine/src/protocol/schema/: packets.fbs
engine/src/protocol/src/: m2_packets.cc  network_packets.cc  packet_codec.h  session_packets.cc
engine/src/simulation/: BUILD.bazel
engine/src/simulation/public/: collision_query.h  simulation.h
engine/src/simulation/src/: area_effect_system.cc  beam_system.cc  collision_query.cc  damage_pipeline.cc  damage_system.cc  player_movement.cc  projectile_system.cc  weapon_system.cc
engine/src/sync/: BUILD.bazel
engine/src/sync/public/: history_buffer.h  snapshot.h
engine/src/sync/src/: history_buffer.cc  snapshot_builder.cc
engine/src/tests/kernel_tests/: BUILD.bazel  client_mode_test.cc  dynamic_abi_smoke_test.cc  kernel_api_test.cc  kernel_c_header_test.c  lan_discovery_test.cc  listen_server_test.cc  relevance_test.cc  tick_loop_test.cc
engine/src/tests/protocol_tests/: BUILD.bazel  m2_packets_test.cc  network_packets_test.cc  packet_header_test.cc  session_packets_test.cc
engine/src/tests/simulation_tests/: BUILD.bazel  area_effect_test.cc  beam_test.cc  collision_query_test.cc  combat_test.cc  damage_pipeline_test.cc  hitscan_test.cc  homing_test.cc  projectile_interaction_test.cc
engine/src/tests/transport_tests/: BUILD.bazel  gns_transport_test.cc  loopback_transport_test.cc  network_simulator_transport_test.cc
engine/src/transport/: BUILD.bazel
engine/src/world/: BUILD.bazel
engine/src/world/public/: components.h  world.h
engine/src/world/src/: entity_factory.cc  world.cc
game_server/: BUILD.bazel  enemy.h  enemy_ai_controller.cc  enemy_ai_controller.h  enemy_ai_controller_test.cc  enemy_manager.cc  enemy_manager.h  enemy_manager_test.cc  game_server.cc  game_server.h  game_server_api_test.cc  gameplay_catalog.yaml  gameplay_config.cc  gameplay_config.h  gameplay_config_test.cc  projectile_sync_benchmark_catalog.yaml  weapon_template_loader_test.cc
game_server/actor_templates/: enemy_grunt.yaml  player.yaml
game_server/collider_templates/: default.yaml
game_server/gameplay_catalog_bundle/: BUILD.bazel
game_server/projectile_templates/: homing_missile.yaml  rocket.yaml  rocket_explosion.yaml  spammer.yaml
game_server/public/: game_server_api.h  game_server_types.h
game_server/src/: game_server_api.cc
game_server/weapon_templates/: beam_rifle.yaml  fire_floor.yaml  grenade.yaml  homing_missile.yaml  rifle.yaml  rocket.yaml  shotgun.yaml  spammer.yaml
kernel/: BUILD.bazel
kernel/src/: kernel.cc  kernel.h  tick_loop.cc  tick_loop.h
plugins/com.network-example.kernel/: README.md  RELEASE_NOTES.md  package.json
plugins/com.network-example.kernel/Runtime/: Kernel.cs  (+4 more)
protocol/: BUILD.bazel
protocol/public/: m2_packets.h  packet_header.h
protocol/src/: packet_header.cc  session_packets.cc
simulation/: BUILD.bazel
simulation/src/: projectile_system.cc  weapon_system.cc
sync/: BUILD.bazel
sync/src/: snapshot_builder.cc
tests/kernel_tests/: BUILD.bazel  client_mode_test.cc  kernel_api_test.cc  tick_loop_test.cc
tests/protocol_tests/: BUILD.bazel  m2_packets_test.cc  session_packets_test.cc
tests/simulation_tests/: BUILD.bazel  hitscan_test.cc
tests/sync_tests/: BUILD.bazel  snapshot_test.cc
tests/transport_tests/: BUILD.bazel  gns_transport_test.cc
tests/world_tests/: BUILD.bazel
tools/: BUILD  local_archive.bzl  macos_codesign.bzl
tools/toolchains/mingw/: BUILD.bazel  cc_toolchain_config.bzl
transport/: BUILD.bazel
transport/public/: loopback_transport.h  network_simulator_transport.h
transport/src/: gns_transport.cc  loopback_transport.cc  network_simulator_transport.cc
world/: BUILD.bazel
world/public/: world.h
world/src/: entity_factory.cc  world.cc
(+38 files in other folders)
