licenses(["notice"])

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "app",
    srcs = [
        "client_app.h",
        "client_app.cc",
        "dedicated_server_app.h",
        "dedicated_server_app.cc",
        "host_server_app.h",
        "host_server_app.cc",
        "main.cc",
    ],
    deps = [
        "//game_server:game_server",
        "//engine/src/kernel:kernel",
        "//engine/src/kernel:tick_loop",
        "@fmt//:fmt",
        "@spdlog//:spdlog",
    ],
)
