licenses(["notice"])

load("//tools:macos_codesign.bzl", "macos_codesigned_artifact")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "app",
    srcs = [
        "client_app.h",
        "client_app.cc",
        "dedicated_server_app.h",
        "dedicated_server_app.cc",
        "host_server_app.h",
        "host_server_app.cc",
        "main.cc",
    ],
    data = [
        "//game_server:collider_templates/default.yaml",
        "//game_server:gameplay_catalog.yaml",
        "//game_server:weapon_templates/beam_rifle.yaml",
        "//game_server:weapon_templates/fire_floor.yaml",
        "//game_server:weapon_templates/homing_missile.yaml",
        "//game_server:weapon_templates/rifle.yaml",
        "//game_server:weapon_templates/rocket.yaml",
        "//game_server:weapon_templates/shotgun.yaml",
        "//game_server:weapon_templates/spammer.yaml",
        "//engine/src/kernel:network_kernel_shared",
    ],
    deps = [
        "//game_server:game_server",
        "//engine/src/kernel:kernel",
        "//engine/src/kernel:tick_loop",
        "@fmt//:fmt",
        "@spdlog//:spdlog",
    ],
)

macos_codesigned_artifact(
    name = "signed_dedicated_server",
    src = ":app",
    out = "signed/network_kernel_dedicated_server",
    executable = True,
)
