licenses(["notice"])

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "gameplay_catalog_bundle_sources",
    srcs = glob([
        "actor_templates/*.yaml",
        "collider_templates/*.yaml",
        "projectile_templates/*.yaml",
        "weapon_templates/*.yaml",
    ]) + [
        "gameplay_catalog.yaml",
    ],
)

cc_library(
    name = "game_server",
    srcs = [
        "enemy_ai_controller.cc",
        "enemy_manager.cc",
        "gameplay_config.cc",
        "game_server.cc",
    ],
    hdrs = [
        "enemy.h",
        "enemy_ai_controller.h",
        "enemy_manager.h",
        "gameplay_config.h",
        "game_server.h",
        "public/game_server_types.h",
    ],
    deps = [
        "//engine/components/ai:ai",
        "//engine/src/kernel:kernel_api",
        "@zip_archive//:zip",
        "@yaml-cpp//:yaml-cpp",
    ],
)

cc_test(
    name = "gameplay_config_test",
    srcs = ["gameplay_config_test.cc"],
    data = glob([
        "actor_templates/*.yaml",
        "collider_templates/*.yaml",
        "projectile_templates/*.yaml",
        "weapon_templates/*.yaml",
    ]) + [
        "gameplay_catalog.yaml",
    ],
    deps = [
        ":game_server",
        "//engine/src/kernel:kernel",
    ],
)

cc_test(
    name = "weapon_template_loader_test",
    srcs = ["weapon_template_loader_test.cc"],
    data = glob([
        "actor_templates/*.yaml",
        "collider_templates/*.yaml",
        "projectile_templates/*.yaml",
        "weapon_templates/*.yaml",
    ]) + [
        "gameplay_catalog.yaml",
    ],
    deps = [
        ":game_server",
        "//engine/src/kernel:kernel",
    ],
)

cc_library(
    name = "game_server_api",
    hdrs = [
        "public/game_server_api.h",
        "public/game_server_types.h",
    ],
    deps = ["//engine/src/kernel:kernel_api"],
)

cc_library(
    name = "game_server_bridge",
    srcs = ["src/game_server_api.cc"],
    deps = [
        ":game_server",
        ":game_server_api",
    ],
)

cc_test(
    name = "enemy_ai_controller_test",
    srcs = ["enemy_ai_controller_test.cc"],
    deps = [
        ":game_server",
        "//engine/src/kernel:kernel",
    ],
)

cc_test(
    name = "enemy_manager_test",
    srcs = ["enemy_manager_test.cc"],
    data = glob([
        "actor_templates/*.yaml",
        "collider_templates/*.yaml",
        "projectile_templates/*.yaml",
        "weapon_templates/*.yaml",
    ]) + [
        "gameplay_catalog.yaml",
    ],
    deps = [
        ":game_server",
        "//engine/src/kernel:kernel",
    ],
)

cc_test(
    name = "game_server_api_test",
    srcs = ["game_server_api_test.cc"],
    data = glob([
        "actor_templates/*.yaml",
        "collider_templates/*.yaml",
        "projectile_templates/*.yaml",
        "weapon_templates/*.yaml",
    ]) + [
        "gameplay_catalog.yaml",
    ],
    deps = [
        ":game_server_bridge",
        "//engine/src/kernel:kernel",
    ],
)
