licenses(["notice"])

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kernel_types",
    hdrs = ["public/kernel_types.h"],
    includes = [".."],
)

cc_library(
    name = "kernel_api",
    hdrs = ["public/kernel_api.h"],
    includes = [".."],
    deps = [":kernel_types"],
)

cc_library(
    name = "tick_loop",
    srcs = ["src/tick_loop.cc"],
    hdrs = ["src/tick_loop.h"],
    includes = [".."],
    deps = [":kernel_types"],
)

cc_library(
    name = "kernel",
    srcs = ["src/kernel.cc"],
    hdrs = ["src/kernel.h"],
    includes = [".."],
    deps = [
        ":kernel_api",
        ":kernel_types",
        ":tick_loop",
        "//engine/src/protocol:protocol",
        "//engine/src/simulation:simulation",
        "//engine/src/sync:sync",
        "//engine/src/transport:transport",
        "//engine/src/world:world",
        "@fmt//:fmt",
        "@glm//:glm",
        "@spdlog//:spdlog",
    ],
)
