licenses(["notice"])

load("@rules_cc//cc:defs.bzl", "cc_shared_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kernel_types",
    hdrs = ["public/kernel_types.h"],
    includes = [".."],
)

cc_library(
    name = "kernel_api",
    hdrs = ["public/kernel_api.h"],
    includes = [".."],
    deps = [":kernel_types"],
)

cc_library(
    name = "tick_loop",
    srcs = ["src/tick_loop.cc"],
    hdrs = ["src/tick_loop.h"],
    includes = [".."],
    deps = [":kernel_types"],
)

cc_library(
    name = "kernel",
    srcs = [
        "src/kernel.cc",
        "src/kernel_api.cc",
        "src/render_state_builder.cc",
    ],
    hdrs = [
        "src/kernel.h",
        "src/render_state_builder.h",
    ],
    includes = [".."],
    deps = [
        ":kernel_api",
        ":kernel_types",
        ":tick_loop",
        "//engine/src/protocol:protocol",
        "//engine/src/simulation:simulation",
        "//engine/src/sync:sync",
        "//engine/src/transport:transport",
        "//engine/src/world:world",
        "@fmt//:fmt",
        "@glm//:glm",
        "@spdlog//:spdlog",
    ],
)

cc_shared_library(
    name = "network_kernel_shared",
    deps = [
        ":kernel",
        "//game_server:game_server_bridge",
    ],
    shared_lib_name = "libnetwork_kernel.dylib",
    user_link_flags = select({
        "//engine:macos": [
            "-L/opt/homebrew/opt/openssl@3/lib",
            "-lssl",
            "-lcrypto",
            "-Wl,-exported_symbol,_Kernel_Create",
            "-Wl,-exported_symbol,_Kernel_Destroy",
            "-Wl,-exported_symbol,_Kernel_GetAbiInfo",
            "-Wl,-exported_symbol,_Kernel_GetLocalPlayerInfo",
            "-Wl,-exported_symbol,_Kernel_StartClient",
            "-Wl,-exported_symbol,_Kernel_StartListenServer",
            "-Wl,-exported_symbol,_Kernel_StartDedicatedServer",
            "-Wl,-exported_symbol,_Kernel_Update",
            "-Wl,-exported_symbol,_Kernel_SubmitInput",
            "-Wl,-exported_symbol,_Kernel_GetRenderStates",
            "-Wl,-exported_symbol,_Kernel_GetRenderStatesAtTime",
            "-Wl,-exported_symbol,_Kernel_PollEvents",
            "-Wl,-exported_symbol,_Kernel_ServerCreateEntity",
            "-Wl,-exported_symbol,_Kernel_ServerDestroyEntity",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityTransform",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityVelocity",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityState",
            "-Wl,-exported_symbol,_Kernel_ServerSubmitEntityInput",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityCombatState",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityWeaponMechanics",
            "-Wl,-exported_symbol,_Kernel_ServerClearEntityWeaponMechanics",
            "-Wl,-exported_symbol,_Kernel_ServerGetEntityWeaponMechanics",
            "-Wl,-exported_symbol,_Kernel_ServerGetAreaEffectState",
            "-Wl,-exported_symbol,_Kernel_ServerGetBeamState",
            "-Wl,-exported_symbol,_Kernel_ServerValidateMechanicsConfig",
            "-Wl,-exported_symbol,_Kernel_ServerGetEntityState",
            "-Wl,-exported_symbol,_Kernel_ServerQueryEntities",
            "-Wl,-exported_symbol,_GameServer_GetAbiInfo",
            "-Wl,-exported_symbol,_GameServer_Create",
            "-Wl,-exported_symbol,_GameServer_CreateWithWeaponTemplateDirectory",
            "-Wl,-exported_symbol,_GameServer_Destroy",
            "-Wl,-exported_symbol,_GameServer_HandleEvent",
            "-Wl,-exported_symbol,_GameServer_Tick",
            "-Wl,-exported_symbol,_GameServer_GetEnemyCount",
            "-Wl,-exported_symbol,_GameServer_QueryWeaponTemplate",
            "-Wl,-exported_symbol,_GameServer_DespawnAll",
        ],
        "//conditions:default": [],
    }),
)
