licenses(["notice"])

load("@rules_cc//cc:defs.bzl", "cc_shared_library")
load("//tools:macos_codesign.bzl", "macos_codesigned_artifact")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kernel_types",
    hdrs = ["public/kernel_types.h"],
    includes = [".."],
)

cc_library(
    name = "kernel_api",
    hdrs = ["public/kernel_api.h"],
    includes = [".."],
    deps = [":kernel_types"],
)

cc_library(
    name = "tick_loop",
    srcs = ["src/tick_loop.cc"],
    hdrs = ["src/tick_loop.h"],
    includes = [".."],
    deps = [":kernel_types"],
)

genrule(
    name = "build_info_macros",
    srcs = ["VERSION"],
    outs = ["src/build_info_macros.h"],
    cmd = """
base_version="$$(tr -d '[:space:]' < $(location :VERSION))"
if [ -z "$$base_version" ]; then
  base_version="0.0.0"
fi
commit_count="$$(git rev-list --count HEAD 2>/dev/null || echo 0)"
git_commit="$$(git rev-parse --short HEAD 2>/dev/null || echo unknown)"
build_timestamp="$$(git show -s --format=%ct HEAD 2>/dev/null || echo unknown)"
module_version="$${base_version}+r$${commit_count}"
{
  printf '#ifndef KERNEL_SRC_BUILD_INFO_MACROS_H_\\n'
  printf '#define KERNEL_SRC_BUILD_INFO_MACROS_H_\\n\\n'
  printf '#define NETWORK_KERNEL_MODULE_VERSION "%s"\\n' "$$module_version"
  printf '#define NETWORK_KERNEL_GIT_COMMIT "%s"\\n' "$$git_commit"
  printf '#define NETWORK_KERNEL_BUILD_TIMESTAMP "%s"\\n\\n' "$$build_timestamp"
  printf '#endif  // KERNEL_SRC_BUILD_INFO_MACROS_H_\\n'
} > "$@"
""",
    local = True,
)

cc_library(
    name = "kernel",
    srcs = [
        "src/build_info.cc",
        "src/kernel.cc",
        "src/kernel_api.cc",
        "src/lan_discovery.cc",
        "src/render_state_builder.cc",
    ],
    hdrs = [
        ":build_info_macros",
        "src/build_info.h",
        "src/kernel.h",
        "src/lan_discovery.h",
        "src/render_state_builder.h",
    ],
    includes = [".."],
    deps = [
        ":kernel_api",
        ":kernel_types",
        ":tick_loop",
        "//engine/src/protocol:protocol",
        "//engine/src/simulation:simulation",
        "//engine/src/sync:sync",
        "//engine/src/transport:transport",
        "//engine/src/world:world",
        "@fmt//:fmt",
        "@glm//:glm",
        "@spdlog//:spdlog",
    ],
)

alias(
    name = "network_kernel_shared",
    actual = select({
        "//engine:macos": ":_network_kernel_shared_macos_signed",
        "//engine:mingw_w64": ":_network_kernel_shared_mingw_stripped",
        "//conditions:default": ":network_kernel_shared_unsigned",
    }),
)

cc_shared_library(
    name = "network_kernel_shared_unsigned",
    deps = [
        ":kernel",
        "//game_server:game_server_bridge",
    ],
    shared_lib_name = select({
        "//engine:macos": "libnetwork_kernel.dylib",
        "//engine:windows": "network_kernel.dll",
        "//conditions:default": "libnetwork_kernel.so",
    }),
    user_link_flags = select({
        "//engine:macos": [
            "-L/opt/homebrew/opt/openssl@3/lib",
            "-lssl",
            "-lcrypto",
            "-Wl,-exported_symbol,_Kernel_Create",
            "-Wl,-exported_symbol,_Kernel_Destroy",
            "-Wl,-exported_symbol,_Kernel_GetAbiInfo",
            "-Wl,-exported_symbol,_Kernel_GetBuildInfo",
            "-Wl,-exported_symbol,_Kernel_GetLocalPlayerInfo",
            "-Wl,-exported_symbol,_Kernel_LANDiscovery_Create",
            "-Wl,-exported_symbol,_Kernel_LANDiscovery_Destroy",
            "-Wl,-exported_symbol,_Kernel_LANDiscovery_StartServer",
            "-Wl,-exported_symbol,_Kernel_LANDiscovery_StopServer",
            "-Wl,-exported_symbol,_Kernel_LANDiscovery_Query",
            "-Wl,-exported_symbol,_Kernel_LANDiscovery_PollResults",
            "-Wl,-exported_symbol,_Kernel_LANDiscovery_ClearResults",
            "-Wl,-exported_symbol,_Kernel_StartClient",
            "-Wl,-exported_symbol,_Kernel_StartListenServer",
            "-Wl,-exported_symbol,_Kernel_StartDedicatedServer",
            "-Wl,-exported_symbol,_Kernel_Update",
            "-Wl,-exported_symbol,_Kernel_SubmitInput",
            "-Wl,-exported_symbol,_Kernel_LoadGameplayCatalog",
            "-Wl,-exported_symbol,_Kernel_LoadGameplayCatalogFromMemory",
            "-Wl,-exported_symbol,_Kernel_GetRenderStates",
            "-Wl,-exported_symbol,_Kernel_GetRenderStatesAtTime",
            "-Wl,-exported_symbol,_Kernel_PollEvents",
            "-Wl,-exported_symbol,_Kernel_PollEntityLifecycleEvents",
            "-Wl,-exported_symbol,_Kernel_GetBenchmarkStats",
            "-Wl,-exported_symbol,_Kernel_GetNetworkStats",
            "-Wl,-exported_symbol,_Kernel_PollDebugRecords",
            "-Wl,-exported_symbol,_Kernel_QueryColliderShapes",
            "-Wl,-exported_symbol,_Kernel_ServerCreateEntity",
            "-Wl,-exported_symbol,_Kernel_ServerDestroyEntity",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityTransform",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityVelocity",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityState",
            "-Wl,-exported_symbol,_Kernel_ServerSubmitEntityInput",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityCombatState",
            "-Wl,-exported_symbol,_Kernel_ServerSetEntityWeaponMechanics",
            "-Wl,-exported_symbol,_Kernel_ServerClearEntityWeaponMechanics",
            "-Wl,-exported_symbol,_Kernel_ServerGetEntityWeaponMechanics",
            "-Wl,-exported_symbol,_Kernel_ServerGetAreaEffectState",
            "-Wl,-exported_symbol,_Kernel_ServerGetBeamState",
            "-Wl,-exported_symbol,_Kernel_ServerGetHomingState",
            "-Wl,-exported_symbol,_Kernel_ServerValidateMechanicsConfig",
            "-Wl,-exported_symbol,_Kernel_ServerGetEntityState",
            "-Wl,-exported_symbol,_Kernel_ServerQueryEntities",
            "-Wl,-exported_symbol,_GameServer_GetAbiInfo",
            "-Wl,-exported_symbol,_GameServer_Create",
            "-Wl,-exported_symbol,_GameServer_CreateWithWeaponTemplateDirectory",
            "-Wl,-exported_symbol,_GameServer_CreateWithGameplayCatalogFromMemory",
            "-Wl,-exported_symbol,_GameServer_Destroy",
            "-Wl,-exported_symbol,_GameServer_HandleEvent",
            "-Wl,-exported_symbol,_GameServer_Tick",
            "-Wl,-exported_symbol,_GameServer_GetEnemyCount",
            "-Wl,-exported_symbol,_GameServer_QueryWeaponTemplate",
            "-Wl,-exported_symbol,_GameServer_DespawnAll",
        ],
        # MinGW-w64 Windows DLL
        "//engine:windows": [
            "-lws2_32",
            "-lbcrypt",
            "-lcrypt32",
            "-liphlpapi",
            "-lwinpthread",
            "-lwinmm",

            "-static-libgcc",
            "-static-libstdc++",
            "-lstdc++",
        ],
        "//conditions:default": [],
    }),
    target_compatible_with = select({
        "//engine:mingw_w64": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

macos_codesigned_artifact(
    name = "_network_kernel_shared_macos_signed",
    src = ":network_kernel_shared_unsigned",
    out = "signed/libnetwork_kernel.dylib",
)

cc_shared_library(
    name = "_network_kernel_shared_mingw_unstripped",
    deps = [
        ":kernel",
        "//game_server:game_server_bridge",
    ],
    shared_lib_name = "network_kernel.unstripped.dll",
    user_link_flags = [
        "-lws2_32",
        "-lbcrypt",
        "-lcrypt32",
        "-liphlpapi",
        "-lwinpthread",
        "-lwinmm",

        "-static-libgcc",
        "-static-libstdc++",
        "-lstdc++",
    ],
    target_compatible_with = select({
        "//engine:mingw_w64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:private"],
)

genrule(
    name = "_network_kernel_shared_mingw_stripped",
    srcs = [":_network_kernel_shared_mingw_unstripped"],
    outs = ["network_kernel.dll"],
    cmd = "x86_64-w64-mingw32-strip --strip-unneeded $(location :_network_kernel_shared_mingw_unstripped) -o $@",
    target_compatible_with = select({
        "//engine:mingw_w64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:private"],
)
