licenses(["notice"])

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "simulation",
    srcs = [
        "src/damage_pipeline.cc",
        "src/damage_system.cc",
        "src/player_movement.cc",
        "src/projectile_system.cc",
        "src/weapon_system.cc",
    ],
    hdrs = ["public/simulation.h"],
    includes = [".."],
    deps = [
        "//engine/src/gameplay:gameplay_data",
        "//engine/src/kernel:kernel_types",
        "//engine/src/sync:sync",
        "//engine/src/world:world",
        "@glm//:glm",
    ],
)
