licenses(["notice"])

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "components",
    hdrs = ["public/components.h"],
    includes = [".."],
    deps = [
        "@glm//:glm",
    ],
)

cc_library(
    name = "world",
    srcs = [
        "src/entity_factory.cc",
        "src/world.cc",
    ],
    hdrs = [
        "public/components.h",
        "public/world.h",
    ],
    includes = [".."],
    deps = [
        ":components",
        "@entt//:entt",
        "@glm//:glm",
    ],
)
