load("@rules_cc//cc/toolchains:cc_toolchain.bzl", "cc_toolchain")
load(":cc_toolchain_config.bzl", "mingw_cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

toolchain(
    name = "cc_toolchain",
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":cc_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "cc_toolchain_impl",
    all_files = ":toolchain_files",
    ar_files = ":toolchain_files",
    compiler_files = ":toolchain_files",
    dwp_files = ":empty",
    linker_files = ":toolchain_files",
    objcopy_files = ":toolchain_files",
    strip_files = ":toolchain_files",
    supports_param_files = 1,
    toolchain_config = ":cc_toolchain_config",
)

mingw_cc_toolchain_config(
    name = "cc_toolchain_config",
)

filegroup(
    name = "toolchain_files",
    srcs = [],
)

filegroup(
    name = "empty",
    srcs = [],
)
