licenses(["notice"])

cc_test(
    name = "tick_loop_test",
    srcs = ["tick_loop_test.cc"],
    deps = ["//engine/src/kernel:tick_loop"],
)

cc_test(
    name = "kernel_api_test",
    srcs = ["kernel_api_test.cc"],
    deps = ["//engine/src/kernel:kernel"],
)

cc_test(
    name = "kernel_c_header_test",
    srcs = ["kernel_c_header_test.c"],
    deps = ["//engine/src/kernel:kernel_api"],
)

cc_test(
    name = "dynamic_abi_smoke_test",
    srcs = ["dynamic_abi_smoke_test.cc"],
    data = ["//engine/src/kernel:network_kernel_shared"],
    deps = [
        "//engine/src/kernel:kernel_api",
        "//game_server:game_server_api",
    ],
)

cc_test(
    name = "client_mode_test",
    srcs = ["client_mode_test.cc"],
    deps = [
        "//engine/src/kernel:kernel",
        "//engine/src/transport:transport",
    ],
)

cc_test(
    name = "listen_server_test",
    srcs = ["listen_server_test.cc"],
    deps = ["//engine/src/kernel:kernel"],
)

cc_test(
    name = "relevance_test",
    srcs = ["relevance_test.cc"],
    deps = ["//engine/src/kernel:kernel"],
)
