licenses(["notice"])

cc_test(
    name = "network_packets_test",
    srcs = ["network_packets_test.cc"],
    deps = ["//engine/src/protocol:protocol"],
)

cc_test(
    name = "packet_header_test",
    srcs = ["packet_header_test.cc"],
    deps = ["//engine/src/protocol:protocol"],
)

cc_test(
    name = "session_packets_test",
    srcs = ["session_packets_test.cc"],
    deps = ["//engine/src/protocol:protocol"],
)
