licenses(["notice"])

cc_test(
    name = "hitscan_test",
    srcs = ["hitscan_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "combat_test",
    srcs = ["combat_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "damage_pipeline_test",
    srcs = ["damage_pipeline_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)
