licenses(["notice"])

cc_test(
    name = "hitscan_test",
    srcs = ["hitscan_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "combat_test",
    srcs = ["combat_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "damage_pipeline_test",
    srcs = ["damage_pipeline_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "collision_query_test",
    srcs = ["collision_query_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "area_effect_test",
    srcs = ["area_effect_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "beam_test",
    srcs = ["beam_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "homing_test",
    srcs = ["homing_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)

cc_test(
    name = "projectile_interaction_test",
    srcs = ["projectile_interaction_test.cc"],
    deps = ["//engine/src/simulation:simulation"],
)
